syntax = "proto3";

package cortex.api.job.online.prediction;

import "cortex/api/job/common.proto";

message Image {
    string key = 1;
    int64 size = 2;
}

message PredictRequest {
    string bucket_name = 1;
    string aws_region = 2;
    string aws_access_key = 3;
    string aws_secret_key = 4;
    string aws_session_token = 5;
    repeated Image images = 6;
    string target_prefix = 7;
    string model_id = 8;
}

message LabledImage {
    string file_path = 1;
    int64 file_size = 2;
    string file_name = 3;
    map<string, string> metadata = 4;
    string label = 5;
    double confidence = 6;
}

message PredictResponse {
    repeated LabledImage images = 1;
    repeated cortex.api.job.common.FailedFile failed_files = 2;
    string s3_results_csv_path = 3;
}
